# cs-5220-project

./: CMakeLists.txt  README.md  common.h  get_metrics  graph.hpp  main.cpp  maze-parser.hpp  mpi.hpp  serial.cpp  serial.hpp  upcxx.hpp  upcxx2.cpp
mazes/: easy-maze-1.txt  maze_test_1.txt
testfiles/: s20ox0y0gx20y20  s2ox0y0gx1y0
